# awesome-researcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING_TEMPLATE.md  Dockerfile  LICENSE  README.md  architecture.md  awesome-list-researcher-prompt.md  build-and-run.sh  pyproject.toml
.cursor/: environment.json
.cursor/rules/: awesome-researcher.mdc  rules.mdc
assets/: av_researcher_contents.json
awesome_list_researcher/: __init__.py  aggregator.py  awesome_parser.py  category_agent.py  duplicate_filter.py  main.py  planner_agent.py  renderer.py  validator.py
awesome_list_researcher/utils/: __init__.py  context_store.py  cost_guard.py  dependency_graph.py  file_graph.py  github.py  logging.py  mcp_handler.py  memory_store.py
docs/: app_flow_document.md  app_flowchart.md  backend_structure_document.md  cursor_project_rules.mdc  frontend_guidelines_document.md  implementation_plan.md  project_requirements_document.md  security_guideline_document.md  tech_stack_document.md  unified_project_document.md  windsurf_file.md
examples/sample_run/: README.md  candidate_packages.json  new_links.json  original.json  plan.json
schema/: awesome.schema.json
src/: __init__.py  awesome_parser.py  category_agent.py  dedup_engine.py  git_utils.py  logger.py  main.py  markdown_to_json.py  planner_agent.py  renderer.py  term_expander_agent.py  url_validator.py  validator.py  video_logger.py
src/utils/: cost_tracker.py  logger.py  timer.py
tests/: run_e2e.sh
