[tool.poetry]
name = "awesome-list-researcher"
version = "0.1.0"
description = "A tool that researches and suggests new resources for GitHub Awesome Lists"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.3.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"
markdownify = "^0.11.6"
mistletoe = "^1.2.1"
rapidfuzz = "^3.6.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.poetry.scripts]
researcher = "awesome_list_researcher.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
