[tool.poetry]
name = "awesome-list-researcher"
version = "0.1.0"
description = "Tool to find new resources for Awesome-Lists using multi-agent OpenAI workflow"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "awesome_list_researcher"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.24.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.11.6"
tenacity = "^8.2.3"
networkx = "^3.4.2"
matplotlib = "^3.8.4"
mistletoe = "^1.2.1"
httpx = "^0.27.0"
rapidfuzz = "^3.6.1"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
awesome-list-researcher = "awesome_list_researcher.main:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
