[tool.poetry]
name = "awesome-researcher"
version = "1.3.2"
description = "A tool to research and expand awesome lists using OpenAI's agent system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.15.0"
openai-agents = "^0.0.15"
requests = "^2.31.0"
sentence-transformers = "^2.3.0"
python-levenshtein = "^0.25.0"
bloom-filter2 = "^2.0.0"
beautifulsoup4 = "^4.12.0"
pybloom-live = "^4.0.0"
markdown = "^3.5.2"
pyyaml = "^6.0.1"
tenacity = "^8.2.3"
jsonschema = "^4.21.1"
httpx = "^0.27.0"
asyncio = "^3.4.3"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
